--- a/headerspec.yaml
+++ b/headerspec.yaml
@@ -1,11 +1,32 @@
 Server:
-  allow: No
+  maxcount: 0
+  overmax-penalty: 30
+  overmax-message: 'This header should not be present. Ever. Nothing good can come of it.'
+  
+  mincount: 0
 
 X-Powered-By:
-  allow: No
+  maxcount: 0
+  overmax-message: 'This header should not be present. Ever. Nothing good can come of it.'
+  overmax-penalty: 30
+  
+  mincount: 0
 
 Strict-Transport-Security:
-  mandatory: yes
-  attributes:
-    key: max-age
-    value: 63113904
+  maxcount: 1
+  overmax-penalty: 50
+  overmax-message: 'This header cannot be set more than once.'
+  
+  mincount: 1
+  undermin-penalty: 50
+  undermin-message: 'This header must always be present and was not found'
+
+
+X-Bogus-Header:
+  maxcount: 1
+  overmax-penalty: 50
+  overmax-message: 'This header cannot be set more than once.'
+  
+  mincount: 1
+  undermin-penalty: 50
+  undermin-message: 'This header must always be present and was not found'
