Catches 40x responses, adds debugprint function, fixes bug with absent headers being reported as good, prints FYI messages, removes categories from output if not empty, replaces must with should in error messages

--- a/ignore-these-headers.yaml
+++ b/ignore-these-headers.yaml
@@ -1,5 +1,9 @@
+Cache-Control: ignore
 Content-Length: ignore
 Content-Language: ignore
 Content-Type: ignore
-Set-Cookie: ignore
 Date: ignore
+Expires: ignore
+Last-Modified: ignore
+pragma: ignore
+Set-Cookie: ignore
