--- a/presence_and_frequency.yaml
+++ b/presence_and_frequency.yaml
@@ -29,6 +29,7 @@ X-Generator:
   overmax-message: 'This header should not be present. Ever. Nothing good can come of it.'
 
   mincount: 0
+
 # Headers we would like to see
 
 Content-Security-Policy:
@@ -38,7 +39,18 @@ Content-Security-Policy:
   
   mincount: 1
   undermin-penalty: 50
-  undermin-message: 'This header must always be present and was not found.'
+  undermin-message: 'This header should always be present and was not found.'
+
+  fyi-message: Please investigate the value of this header. Its presence alone is not sufficient.  
+
+Referrer-Policy:
+  maxcount: 1
+  overmax-penalty: 50
+  overmax-message: 'This header should not be set more than once.'
+  
+  mincount: 1
+  undermin-penalty: 50
+  undermin-message: 'This header should always be present and was not found.'
 
 
 Strict-Transport-Security:
@@ -48,7 +60,7 @@ Strict-Transport-Security:
   
   mincount: 1
   undermin-penalty: 50
-  undermin-message: 'This header must always be present and was not found.'
+  undermin-message: 'This header should always be present and was not found.'
 
 
 X-Content-Type-Options:
@@ -58,7 +70,7 @@ X-Content-Type-Options:
 
   mincount: 1
   undermin-penalty: 50
-  undermin-message: 'This header must always be present and was not found.'
+  undermin-message: 'This header should always be present and was not found.'
 
 
 X-Frame-Options:
@@ -68,7 +80,9 @@ X-Frame-Options:
 
   mincount: 1
   undermin-penalty: 50
-  undermin-message: 'This header must always be present and was not found.'
+  undermin-message: 'This header should always be present and was not found.'
+  
+  fyi-message: Please investigate the value of this header. Its presence alone is not sufficient.  
 
 
 X-XSS-Protection:
@@ -78,6 +92,6 @@ X-XSS-Protection:
 
   mincount: 1
   undermin-penalty: 50
-  undermin-message: 'This header must always be present and was not found.'
+  undermin-message: 'This header should always be present and was not found.'
 
 
