--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,6 +15,8 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run: |
+        pwd
+        ls -la
         python -m pip install --upgrade pip
 #        pip install -r requirements.txt
     - name: Lint with flake8
